# data-journalism-notebooks

./: .gitignore  Makefile  Pipfile  README.md  pyproject.toml  requirements-codespaces.txt  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-image.yml
content/: README.ipynb  art_of_functions.ipynb  awesome.py  demystifying_dot_notation.ipynb  dict_basics.ipynb  embracing_errors.ipynb  pandas_basics_with_homicide_rates.ipynb  pandas_filtering.ipynb  pandas_groupby.ipynb  pandas_reshaping.ipynb  pandas_stacking.ipynb  python_count_filter.ipynb  python_csv.ipynb  python_date_conversions.ipynb  python_dict_basics.ipynb  python_file_io.ipynb  python_libraries.ipynb  python_overview.ipynb  python_remote_files.ipynb  python_syntax_crash_course.ipynb
content/apis/: README.ipynb  api_services.ipynb  apis_and_the_news.ipynb  quakebot.ipynb  working_with_apis.ipynb
content/classes_and_oop/: README.ipynb  awesome.py  elections_oop_code_challenge.ipynb  hidden_life_of_objects.ipynb  method_chaining.ipynb  method_chaining_part2.ipynb  methods_unchained.ipynb  module_dot_something.ipynb  poking_and_prodding.ipynb  why_bother.ipynb
content/web_scraping/: README.ipynb  dissecting_websites.ipynb  drive_the_browser_robot.ipynb  exercises.ipynb  resources.ipynb  scraping_101.ipynb  skip_scraping_cheat.ipynb  web_scraping_for_news.ipynb  website_personalities.ipynb  wysiwyg_scraping.ipynb
docs/: admin_jupyterlite.md
markdown_source/python/: art_of_functions.ipynb  art_of_functions.md  overview.md
